# Semesterprojekt-2025

./: CMakeLists copy.txt  CMakeLists.txt  ChessBotGUI.cpp  ChessBotGUI.h  ChessGUI.cpp  ChessGUI.h  Chessboard.cpp  Chessboard.h  DC_Motor_laboratorieforsøg  GUI.cpp  GUI.h  GUIWindow.cpp  GUIWindow.h  Game.cpp  Game.h  GrapperCode.c  Gripper.cpp  Gripper.h  Materialeliste.txt  Milestones.txt  Original.cpp  PhoneticInput.cpp  PhoneticInput.h  Shuntediode laboratorie forsøg  Stockfish.cpp  Stockfish.h  Vision.cpp  Vision.h  main copy.cpp  main.c  main.cpp  mainTest.cpp  picoTest.cpp  resetBoardTest.cpp  stockfishTest.cpp  test_rtde.cpp  visionTest.cpp
3D filer/: BishopUntagged.stp  Chess set tagable.gcode.3mf  End_Effector_Calibration_tool.iam  KingUntagged.ipt  KingUntagged.stp  KnightTaggeable.stp  KnightUntagged.ipt  PawnUntagged.ipt  QueenTaggeable.stp  QueenUntagged.ipt  RookUntagged.ipt  RookUntagged.stp
3D filer/Bilag/: Base.dwg  CalibrationTool.dwg  Flange_01.dwg  Flange_02.dwg  GripperAssembled.dwg  Jaw_01.dwg  Jaw_02.dwg  Jaw_03.dwg  Motor_housing.dwg  Screw.dwg  Top.dwg  calibrationPoint.iam
3D filer/Bilag/OldVersions/: Base.0001.dwg  CalibrationTool.0001.dwg  Flange_02.0001.dwg  GripperAssembled.0001.dwg  Jaw_01.0002.dwg  Jaw_02.0002.dwg
3D filer/Board/: 32x_Top_base.3mf  32x_Top_base.gcode.3mf  Assembled board.iam  Base.dwg  Base.ipt  Base.stp  Base2.ipt  Base_24.gcode.3mf  Base_final.stp  Base_sort_16.gcode.3mf  Base_x_16.3mf  Border P L.ipt  Border P L.stp  Border P R.ipt  Border P R.stp  Border S 1.ipt  Border S 1.stp  Border S 2.ipt  Border S 2.stp  CVTag.3mf  CVTag.gcode.3mf  CVTag.ipt  CVTag.stp  CVTag_king.ipt  CVTag_king.stp  Top.dwg  Top.ipt  Top.stp  Top_24.gcode.3mf  Top_sort_16.gcode.3mf  Top_x_16.3mf
3D filer/Board/OldVersions/: Assembled board.0007.iam  Base.0005.ipt  Base.0007.ipt  Base.0012.ipt  Base2.0001.ipt  Border P R.0003.ipt  Border.0001.ipt  CVTag.0001.ipt  Top.0001.dwg  Top.0002.ipt
3D filer/Gripper/: Flange1.stl  Flange2.stl  Flange_01.ipt  Flange_02.ipt  ForceToVolt.py  ForsøgOpstilling.blend  ForsøgOpstilling.blend1  ForsøgOpstillingBundKlods.stl  ForsøgOpstillingTopKlods.3mf  ForsøgOpstillingTopKlods.stl  GearFromGripperReconstruction.mtl  Gripper.blend  Gripper.blend1  GripperAssembled.dwg  GripperCorrectGears.blend  GripperCorrectGears.blend1  GripperCorrectGearsV2.blend  GripperCorrectGearsV2.blend1  GripperExploded-1.dwg  GripperFingersCorrectGearsV3.blend  GripperFingersCorrectGearsV3.blend1  InnerGripperArea.ipt  InnerGripperArea.stp  Jaw_01.dwg  MotorHousing.ipt  MotorHousing.stl  Screw.ipt  Screw.stl
3D filer/Gripper/OldVersions/: Flange_01.0001.ipt
3D filer/OldVersions/: BishopUntagged.0004.ipt  End_Effector_Calibration_tool.0001.iam  PawnUntagged.0001.ipt  QueenUntagged.0003.ipt  RookUntagged.0001.ipt
3D filer/Pieces/: BishopTaggeable.stp  BishopUntagged.ipt  KnightUntagged.ipt  KnightUntagged.stp  PawnTaggable.stp  PawnUntagged.ipt  PawnUntagged.stp  QueenUntagged.stp  RookTaggable.stp
Chessgame/: stockfishApp2.cpp  stockfishApp2.h  stockfishMain2.cpp
GUI/: ChessBotGUI.cpp  GUI.cpp  GUI.h  GUIWindow.cpp  GUIWindow.h  GUI_main.cpp
GUI/ignore old header/: GUI copy.h
IPC/: SocketClient.h  SocketClinet.cpp  SocketServer.cpp  SocketServer.h
Pico communication/: CMakeLists.txt  blinkTest.cpp  main.cpp  pickupTest.cpp  simpleDataTransfer.cpp
Script/: GripperScript.py  gripper2.py
Test files/: mainTest.cpp  pickupTest.cpp  picoTest.cpp  resetBoardTest.cpp  stockfishTest.cpp  visionTest.cpp
Unsorted/: Chessboard.cpp  stockfishTest.cpp  visionTest.cpp
